<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/edit_info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/account_percentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="0 %"
            android:textColor="@color/orange"
            android:textSize="60sp"
            android:textStyle="bold" />

        <LinearLayout
        android:id="@+id/edit_min_max_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/input_min"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/min"
            android:inputType="number" />
        <EditText
            android:id="@+id/input_max"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:hint="@string/max"
            android:inputType="number" />

            <Button
                android:id="@+id/btn_set_min_max"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_button_default"
                android:text="@string/set" />

        </LinearLayout>
        <TextView
            android:id="@+id/sold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sold: 0 RON"
            android:textColor="@color/orange"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/logout"
            android:background="@drawable/round_button_default"/>
    </LinearLayout>

</ScrollView>